# pseudo-generic-linked-list

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: pseudo_generic_linked_list_declaration.h  pseudo_generic_linked_list_definition.h  pseudogenericlinkedlistdeclaration.h  pseudogenericlinkedlistdefinition.h
src/: pseudo_generic_linked_list_declaration.h
test/: int_p_linked_list.c  int_p_linked_list.h  main.c  struct_test_ll.c  struct_test_ll.h
